# sqlagent_web

./: .gitignore  README.md  app.py  index.html  pyproject.toml
app/: __init__.py  agent_service.py  chart_builder.py  config.py  custom_tools.py  debug_utils.py  logging_config.py  main.py  parsers.py  prompts.py  routes.py  schema_rag.py  subagents.py
app/middleware/: __init__.py  safety.py
scripts/: build_index.py  init_schema.py
