[project]
name = "sqlagent-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "fastapi>=0.121.2",
    "langchain>=1.0.4",
    "langchain-anthropic>=1.0.1",
    "langchain-aws>=1.0.0",
    "langchain-azure-ai>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "pyodbc>=5.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "deepagents>=0.3.0",
]
